# Nemea-Supervisor

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  LICENCE  Makefile  Makefile.am  Makefile.am_old  Makefile.in  NEWS  README  README.md  aclocal.m4  bootstrap.sh  build_deps.txt  check_nemea_modules_connected.in  cmake_install.cmake  config.h  config.h.in  configure  configure.ac  graph.c  graph.h  internal.c  internal.c_old  internal.h  internal.h_old  module_info_test.c  module_info_test.h  nemea-modulesinfo  nemea-modulesinfo.in  nemea-supervisor  nemea-supervisor.in  nemea-supervisor.service  nemea-supervisor.service.in  nemea-supervisor.spec  nemea-supervisor.spec.in  nemea.yang  (+8 more)
CMakeModules/: FindCMocka.cmake  FindSYSREPO.cmake  FindTRAP.cmake
configs/: .nemea.yang.swn  .nemea.yang.swo  .nemea.yang.swp  Makefile  Makefile.am  Makefile.in  README.md  amplification_detection.sup  blacklistfilter.mkdir  booterfilter.mkdir  brute_force_detector.mkdir  brute_force_hist_detector.mkdir  config_example.xml  dnstunnel_detection.mkdir  dnstunnel_detection.sup  example_with_comments.xml  flow_meter.sup  generate_sup_conf_inline.sh  haddrscandetector.mkdir  hoststats.mkdir  hoststats.sup  ipblacklistfilter.sup  ipfixcol-startup.xml  ipfixcol.sup  ipfixcol.sup.in  ipv6stats.mkdir  miner_detector.mkdir  multopt.mkdir  multopt.sup  prepare_default_config.sh  prepare_default_config.sh.in  set_default_nic.sh  sip_bf_detector.mkdir  smtp_spam_detector.mkdir  supervisor_config.xml.example  supervisor_config_template.xml  supervisor_config_template.xml.in  template.sup  voipfrauddetection.mkdir  voipfrauddetection.sup  (+4 more)
configs/data-sources/: flow_meter.sup  ipfixcol.sup
configs/detectors/: blacklistfilter.sup  blacklistfilter_with_af.sup  brute_force_hist_detector.sup  dnstunnel_detection.sup  ipblacklistfilter.sup  miner_detector.sup  sip_bf_detector.sup  smtp_spam_detector.sup  voipfrauddetection.sup  vportscandetector.sup
configs/loggers/: brute_force_hist_logger.sup  dnstunnel_logger.sup  flowmeter_logger.sup  ipblacklistfilter_logger.sup  miner_detector_logger.sup
configs/others/: ipv6stats.sup  traffic_repeater.sup
configs/reporters/: amplification_reporter.sup  brute_force_hist_reporter.sup  brute_force_reporter.sup  haddrscan_reporter.sup  hoststats_reporter.sup  ipblacklistfilter_reporter.sup  sipbf2idea.sup  voip_fraud_reporter.sup  vportscan_reporter.sup
deploy/: libtrap-dir.service  nemea-supervisor.spec.in  nemea_supervisor.cbp
doc/: Doxyfile  mainpage.md
docs/: Doxyfile  annotated.html  classes.html  conf_8c.html  conf_8h.html  conf_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  inst__control_8c.html  inst__control_8h.html  inst__control_8h_source.html  main_8c.html  main_8h.html  main_8h_source.html  menudata.js  module_8c.html  module_8h.html  module_8h_source.html  run__changes_8c.html  run__changes_8h.html  run__changes_8h_source.html  service_8c.html  service_8h.html  service_8h_source.html  stats_8c.html  stats_8h.html  stats_8h_source.html  structav__module__s.html  structfile__ifc__params__s.html  (+19 more)
html/: classes.html  (+50 more)
nagios/nagios-client/: Makefile.am  Makefile.in  README.md
nagios/nagios-client/conf/: nemea_modules_list  nrpe-part.conf
nagios/nagios-client/scripts/: check_free_memory.sh  check_link_traffic.sh  check_nemea_dropped.sh  check_nemea_loaded_module_config  check_nemea_loaded_module_config.in  check_nemea_modules.py  check_nemea_modules_connected  check_nemea_modules_connected.in  check_nemea_sent.sh  check_swap_memory.sh
src/: CMakeLists.txt  Makefile  cmake_install.cmake  conf.c  conf.h  config_types.h  inst_control.c  inst_control.h  instance_control.c  instance_control.h  main.c  main.h  module.c  module.h  module_control.c  module_control.h  nemea-supervisor  run_changes.c  run_changes.h  service.c  service.h  stats.c  stats.h  sup_main.c  supervisor.c  supervisor.h  utils.c  utils.h
test/: CMakeLists.txt  Makefile  README.md  async_change.py  async_stats.py  change_cases.txt  conf_test_static.c  conf_tests  get_subtree.py  intable_module  module_tests  run_changes_tests  run_changes_tests.c  run_tests.sh  stats_tests  stats_tests.c  supervisor_tests  test_conf.c  test_module  test_module.c  test_supervisor  test_supervisor.c
test/helpers/: Makefile  a.out  nemea_changes_iter.c  nemea_changes_iter2.c  nemea_get_subtree_iter.c  nemea_state_data_example.c  sr_get_item_example.c  sr_get_items_example.c  types.c  valgrind.sh
test/helpers/libtrap_sr/: CMakeLists.txt  howto.txt  subscribe.c  trap-ifc-stats.yang
test/yang/: nemea-test-1-startup-config-1.xml  nemea-test-1-startup-config-3.xml  nemea-test-1-startup-config-4.xml  nemea-test-1-startup-config-stats-1.xml
tests/: .gitignore  CMakeLists.txt  Makefile  README.md  async_change.py  async_stats.py  cmake_install.cmake  intable_module.c  run_tests.sh  test_conf.c  test_inst_control.c  test_instance_control.c  test_module.c  test_run_changes.c  test_stats.c  test_supervisor.c  test_utils.c  testing_utils.h
tests/helpers/: CMakeLists.txt  a.out  cmake_install.cmake  convert_prod_yangs_to_testing.sh  get_subtree_iter.c  import_conf.sh  nemea_get_subtree_iter  nemea_get_subtree_noniter.c  nemea_startup_config.c  nemea_state_data_example.c  nemea_test.py  parse_stats.c  reinit_sysrepo.sh  sr_get_item_example.c  sr_get_items_example.c
tests/helpers/attempts/: get_subtree.py  make_folders.sh  nemea_get_subtree_noniter.c  nemea_install.sh  nemea_state_data_example.c  python3_application_changes_example.py  sr_set_item_example.c
tests/yang/: nemea-test-1-startup-2.data.json  nemea-test-1-startup-2.xml  nemea-test-1-startup-3.data.json  nemea-test-1-startup-4.data.json  nemea-test-1-startup-5.data.json  nemea-test-1-startup-6.data.json  nemea-test-1-startup-config-2.xml  nemea-test-1-startup-for-stats-1.data.json  nemea-test-1.yang  trap-interfaces-test-1.yang
(+209 files in other folders)
